--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,15 @@
         @apply max-w-screen-xxl mx-auto px-3 md:px-8
     }
     .glass {
-        @apply bg-[#ffffff83]
+        @apply bg-[#ffffffbe]
+    }
+    .main-bg {
+        @apply bg-[radial-gradient(ellipse_at_bottom,_var(--tw-gradient-stops))] from-sky-300 via-pink-200 to-blue-600
+    }
+    .hcol{
+        @apply text-stone-800 font-medium
+    }
+    .pcol{
+        @apply text-zinc-700
     }
 }
