--- a/src/index.css
+++ b/src/index.css
@@ -2,20 +2,31 @@
 @tailwind components;
 @tailwind utilities;
 
+
+.scroll-hide::-webkit-scrollbar {
+    display: none;
+}
+
+.scroll-hide {
+  -ms-overflow-style: none; 
+  scrollbar-width: none;  
+}
+
+
 @layer components {
     .container {
         @apply max-w-screen-xxl mx-auto px-3 md:px-8
     }
     .glass {
-        @apply bg-[#ffffffbe]
+        @apply md:bg-[#ffffffcb] bg-[#ffffffee] dark:bg-[radial-gradient(ellipse_at_bottom,_var(--tw-gradient-stops))] from-gray-950 via-slate-900 to-stone-950
     }
     .main-bg {
-        @apply bg-[radial-gradient(ellipse_at_bottom,_var(--tw-gradient-stops))] from-sky-300 via-pink-200 to-blue-600
+        @apply bg-[radial-gradient(ellipse_at_bottom,_var(--tw-gradient-stops))] from-sky-400 via-pink-50 to-blue-600 
     }
     .hcol{
-        @apply text-stone-800 font-medium
+        @apply text-stone-800 font-medium dark:text-gray-300
     }
     .pcol{
-        @apply text-zinc-700
+        @apply text-zinc-700 dark:text-slate-300
     }
 }
