--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,27 @@
 @tailwind components;
 @tailwind utilities;
 
+/* width */
+  .scroll::-webkit-scrollbar {
+    width: 4px;
+  }
+  /* Track */
+  .scroll::-webkit-scrollbar-track {
+    background: transparent;
+  }
+  /* Handle */
+  .scroll::-webkit-scrollbar-thumb {
+    background: rgba(0, 0, 255, 0.295);
+    border-radius: 50px;
+  }
+  /* Handle on hover */
+  .scroll::-webkit-scrollbar-thumb:hover {
+    background: #fff12873;
+  }
 
 .scroll-hide::-webkit-scrollbar {
     display: none;
 }
-
 .scroll-hide {
   -ms-overflow-style: none; 
   scrollbar-width: none;  
@@ -24,9 +40,9 @@
         @apply bg-[radial-gradient(ellipse_at_bottom,_var(--tw-gradient-stops))] from-sky-400 via-pink-50 to-blue-600 
     }
     .hcol{
-        @apply text-stone-800 font-medium dark:text-gray-300
+        @apply text-stone-700 font-medium dark:text-slate-300
     }
     .pcol{
-        @apply text-zinc-700 dark:text-slate-300
+        @apply text-zinc-700 dark:text-slate-400
     }
 }
