--- a/src/index.css
+++ b/src/index.css
@@ -37,12 +37,15 @@
         @apply md:bg-[#ffffffcb] bg-[#ffffffee] dark:bg-[radial-gradient(ellipse_at_bottom,_var(--tw-gradient-stops))] from-gray-950 via-slate-900 to-stone-950
     }
     .main-bg {
-        @apply bg-[radial-gradient(ellipse_at_bottom,_var(--tw-gradient-stops))] from-sky-400 via-pink-50 to-blue-600 
+        @apply bg-[radial-gradient(ellipse_at_bottom,_var(--tw-gradient-stops))] from-sky-400 via-purple-100 to-blue-600 
     }
     .hcol{
         @apply text-stone-700 font-medium dark:text-slate-300
     }
     .pcol{
         @apply text-zinc-700 dark:text-slate-400
+    }
+    .cardcol{
+      @apply bg-slate-100 dark:bg-gradient-to-b from-slate-800 via-slate-900 to-slate-900
     }
 }
